Update Code and scripts